[gd_scene load_steps=3 format=3 uid="uid://d0wglriavtij"]

[ext_resource type="Script" uid="uid://bs7vlao78wiht" path="res://src/battle/action_button.gd" id="1_juqvx"]
[ext_resource type="Texture2D" uid="uid://d1te5324os86k" path="res://assets/graphics/icons/bolt.png" id="1_sm4rn"]

[node name="ActionButton" type="Control"]
custom_minimum_size = Vector2(280, 120)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_juqvx")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 17.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -19.0
offset_right = -9.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Provoke"
horizontal_alignment = 2

[node name="FocusPips" type="HBoxContainer" parent="."]
modulate = Color(0.20784314, 0.7411765, 0.77254903, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/separation = -5
alignment = 2

[node name="Bolt" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt2" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt3" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt4" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt5" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt6" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt7" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[node name="Bolt8" type="TextureRect" parent="FocusPips"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
texture = ExtResource("1_sm4rn")
expand_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
